# joyce-quantum

./: .gitignore  CMakeLists.txt  README.md  comm_stat  enable_figure  exp2_cs0  exp2_cs1  exp2_cs2  exp2_og  exp2_pre  exp2_ro  exp2_ws  exp_1_0_d  exp_1_0_e  gate_runtime_figure  install.bash  nsight.sh
exp/: master_2.py
exp/exp1/: d_10.py  d_11.py  d_12.py  d_13.py  d_14.py  d_15.py  d_16.py  d_17.py  d_18.py  d_19.py  d_20.py  d_21.py  d_22.py  d_23.py  d_24.py  d_25.py  d_26.py  d_27.py  d_28.py  d_29.py  d_30.py  e_10.py  e_11.py  e_12.py  e_13.py  e_14.py  e_15.py  e_16.py  e_17.py  e_18.py  e_19.py  e_20.py  e_21.py  e_22.py  e_23.py  e_24.py  e_25.py  e_26.py  e_27.py  e_28.py  (+3 more)
exp/exp2/: ecs0_10_0.py  ecs0_10_1.py  ecs0_10_2.py  ecs0_10_3.py  ecs0_10_4.py  ecs0_10_5.py  ecs0_10_6.py  ecs0_10_7.py  ecs0_10_8.py  ecs0_10_9.py  ecs0_11_0.py  ecs0_11_1.py  ecs0_11_2.py  ecs0_11_3.py  ecs0_11_4.py  ecs0_11_5.py  ecs0_11_6.py  ecs0_11_7.py  ecs0_11_8.py  ecs0_11_9.py  ecs0_12_0.py  ecs0_12_1.py  ecs0_12_2.py  ecs0_12_3.py  ecs0_12_4.py  ecs0_12_5.py  ecs0_12_6.py  ecs0_12_7.py  ecs0_12_8.py  ecs0_12_9.py  ecs0_13_0.py  ecs0_13_1.py  ecs0_13_2.py  ecs0_13_3.py  ecs0_13_4.py  ecs0_13_5.py  ecs0_13_6.py  ecs0_13_7.py  ecs0_13_8.py  ecs0_13_9.py  (+1430 more)
include/: cudarray.cuh  telekinesis.cuh
plotter/: enable.py  exp1.py  exp2.py  exp2_1.py  local_global.py
src/: main.c  telekinesis.cu
test/: comm_test.py  grover.py  test.py
